--- a/index.css
+++ b/index.css
@@ -1,10 +1,23 @@
 html, body {
     margin: 0;
     padding: 0;
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Roboto', sans-serif;
     background-color: #EEF0F4;
+    color: #432000;
+    user-select: none;
 }
 
+h1 {
+    text-align: center;
+    font-family: 'Protest Strike', sans-serif;
+    font-size: 40px;
+}
+
+p {
+    text-align: center;
+    font-size: 15px;
+    font-family: 'Rubik', sans-serif;
+}
 .container {
     display: flex;
     flex-direction: column;
@@ -35,9 +48,14 @@ button {
     border: 0;
     padding: 15px;
     border-radius: 8px;
-    font-size: 20px;
+    font-size: 20px;;
     text-align: center;
     font-family: 'Rubik', sans-serif;
+}
+
+button:hover {
+    background-color: #432000;
+    cursor: pointer;
 }
 
 ul {
@@ -46,6 +64,7 @@ ul {
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
+    font-family: "Protest Strike", sans-serif;
 }
 
 ul li {
@@ -56,4 +75,9 @@ ul li {
     flex-grow: 1;
     text-align: center;
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2)
+}
+
+ul li:hover {
+    background-color: #FFECC7;
+    cursor: pointer;
 }
